--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -8,8 +8,36 @@
 <body>
 <h1>My Super Fancy Spa</h1>
 <div id = "clientProfile">
+
+    <h2>My Profile</h2>
+    <p th:text="${name}"</p>
+    <p th:text="${skintype}"</p>
+    <p th:text="${manipedi}"</p>
+
 </div>
 <div id = "servicesMenu">
+    <table>
+
+        <th:block th:each="facial : ${appropriateFacials}">
+            <tr>
+                <td th:text="${facial}"></td>
+            </tr>
+        </th:block>
+        <div  th:if ="${manipedi == 'manicure'}">
+            <h3>Manicure</h3>
+            <p th:replace = "fragments :: manicureDescription"></p>
+            <div th:if ="${manipedi == 'pedicure'}">
+            <h3>Pedicure</h3>
+            <p th:replace = "fragments :: pedicureDescription"></p>
+            </div>
+        <div
+        </div>
+
+    </table>
 </div>
 </body>
 </html>
+
+<!--        <th:block th:each="facial : ${appropriateFacials}">-->
+<!--            <li th:text="${facial}"></li>-->
+<!--        </th:block>-->
