--- a/src/main/resources/templates/user/add.html
+++ b/src/main/resources/templates/user/add.html
@@ -1,36 +1,36 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th = "http://www.thymeleaf.org/">
+<html lang="en" xmlns:th="http://www.thymeleaf.org/">
 <head>
-    <meta charset="UTF-8">
-    <link href="../static/css/styles.css" th:href="@{/css/styles.css}" rel="stylesheet" />
-    <title>Sign Up</title>
+    <meta charset="UTF-8"/>
+    <title></title>
 </head>
 <body>
-    <form method = 'post' th:action="@{/user}">
-        <label>
-            Username:
-            <input type = 'text' name = 'username' th:value="${username}">
-        </label>
 
-        <label>
-            Email:
-            <input type = 'email' name = 'email' th:value="${email}">
-        </label>
+<form th:action="@{user/add}" method="post">
+    <label>
+        Username:
+        <input type="text" th:value="${user.username}"><br>
+    </label>
 
-        <label>
-            Password:
-            <input type = 'password' name = 'password'>
-        </label>
+    <label>
+        Email:
+        <input th:value="${user.email}"><br>
+    </label>
 
-        <label>
-            Verify Password:
-            <input type = 'password' name = 'verify'>
-        </label>
+    <label>
+        Password:
+        <input type="password" th:value="${user.password}"><br>
+    </label>
 
-        <p th:text="${error}"></p>
+    <label>
+        Verify Password:
+        <input type="password" th:value="${user.verify}"><br>
+    </label>
 
-        <input type = 'submit' value = 'Sign Up'>
-    </form>
+    <p th:text="${error}"></p>
+
+    <input type="submit" value = "Sign Up!">
+</form>
 
 </body>
 </html>
