--- a/src/main/resources/templates/user/index.html
+++ b/src/main/resources/templates/user/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th = "http://www.thymeleaf.org/">
+<html lang="en" xmlns: th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <link href="../static/css/styles.css" th:href="@{/css/styles.css}" rel="stylesheet" />
-    <title>Welcome</title>
+    <meta charset="uTF-8"/>
+    <title>
+        <h1>Welcome "username"!</h1>
+    </title>
 </head>
 <body>
-    <p th:text = "'Welcome ' + ${user.username} + '!'"></p>
-    <a th:href="@{/}">
-        Select your spa services here
-    </a>
+
 </body>
 </html>
