--- a/src/main/resources/templates/user/add.html
+++ b/src/main/resources/templates/user/add.html
@@ -1,35 +1,71 @@
+<!--<!DOCTYPE html>-->
+<!--<html lang="en" xmlns:th="http://www.thymeleaf.org/">-->
+<!--<head>-->
+<!--    <meta charset="UTF-8"/>-->
+<!--    <title></title>-->
+<!--</head>-->
+<!--<body>-->
+
+<!--<form th:action="@{/add}" method="post">-->
+<!--    <label>-->
+<!--        Username:-->
+<!--        <input type="text" th:value="${user.username}"><br>-->
+<!--    </label>-->
+
+<!--    <label>-->
+<!--        Email:-->
+<!--        <input th:value="${user.email}"><br>-->
+<!--    </label>-->
+
+<!--    <label>-->
+<!--        Password:-->
+<!--        <input type="password" th:value="${user.password}"><br>-->
+<!--    </label>-->
+
+<!--    <label>-->
+<!--        Verify Password:-->
+<!--        <input type="password" th:value="${user.verify}"><br>-->
+<!--    </label>-->
+
+<!--    <p th:text="${error}"></p>-->
+
+<!--    <input type="submit" value = "Sign Up!">-->
+<!--</form>-->
+
+<!--</body>-->
+<!--</html>-->
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org/">
+<html lang="en" xmlns:th = "http://www.thymeleaf.org/">
 <head>
-    <meta charset="UTF-8"/>
-    <title></title>
+    <meta charset="UTF-8">
+    <link href="../static/css/styles.css" th:href="@{/css/styles.css}" rel="stylesheet" />
+    <title>Sign Up</title>
 </head>
 <body>
-
-<form th:action="@{user/add}" method="post">
+<form method = 'post' th:action="@{/user}">
     <label>
         Username:
-        <input type="text" th:value="${user.username}"><br>
+        <input type = 'text' name = 'username' th:value="${username}">
     </label>
 
     <label>
         Email:
-        <input th:value="${user.email}"><br>
+        <input type = 'email' name = 'email' th:value="${email}">
     </label>
 
     <label>
         Password:
-        <input type="password" th:value="${user.password}"><br>
+        <input type = 'password' name = 'password'>
     </label>
 
     <label>
         Verify Password:
-        <input type="password" th:value="${user.verify}"><br>
+        <input type = 'password' name = 'verify'>
     </label>
 
     <p th:text="${error}"></p>
 
-    <input type="submit" value = "Sign Up!">
+    <input type = 'submit' value = 'Sign Up'>
 </form>
 
 </body>
